Fix event date size on small screens

--- a/src/components/events/EventList.module.scss
+++ b/src/components/events/EventList.module.scss
@@ -30,15 +30,17 @@
     justify-content: center;
     align-items: center;
     
-    aspect-ratio: 1;
-    width: 3.5em;
     background-color: $arduino-blue;
     color: white;
+    
     font-size: 1.5rem;
-    text-align: center;
+    aspect-ratio: 1;
+    flex-shrink: 0;
+    width: 3.5em;
+    padding: 1em;
+    
   
     @media (max-width: $breakpoint-mobile) {
-      width: 1.5em;
       font-size: 1.1rem;
       font-weight: 600;
     }
